# Missao-Estelar

./: Controll.hs  LogicaDoJogo.hs  LogicaInvasores.hs  LogicaJogador.hs  Main.hs  README.md  TesteTela.hs  Tipos.hs  codigo.hs  invasores.bmp:Zone.Identifier  missao-estelar.cabal  nave.bmp:Zone.Identifier
Frames/: GameOver.txt  Inicio.txt  Play.txt  Play1.txt  Play2.txt  Win.txt
Funcional/: LogicaInvasores.hs
Haskell/: LogicaDoJogo.hs  Tipos.hs
Parte Funcional em Haskell/: Controll.hs
